<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.12</version>
		<relativePath />
	</parent>

	<groupId>com.telecominfraproject.wlan</groupId>
	<artifactId>tip-wlan-cloud-root-pom</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>tip-wlan-cloud-root-pom</name>
	<description>Place to keep all common properties, dependencies, and settings</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tip-wlan-cloud.release.version>1.2.0-SNAPSHOT</tip-wlan-cloud.release.version>
		<apache.commons.math3.version>3.6.1</apache.commons.math3.version>
		<seruco.base62.version>0.1.2</seruco.base62.version>
		<netflix.servo.version>0.12.17</netflix.servo.version>
		<apache.commons.text.version>1.2</apache.commons.text.version>
		<podam.version>6.0.3.RELEASE</podam.version>
		<pegdown.version>1.6.0</pegdown.version>
		<cassandra.datastax.driver.version>4.7.2</cassandra.datastax.driver.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${apache.commons.text.version}</version>
			</dependency>
			<dependency>
				<groupId>uk.co.jemos.podam</groupId>
				<artifactId>podam</artifactId>
				<version>${podam.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- Dependencies for Unit and Integration Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- needed so that tests that are written in the Junit4 can be picked up by the test runner for the Junit5 in eclipse -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Jackson databind dependencies used for JSON annotations -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- Need this for spring annotations like @Configuration, @Profile, etc. -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- dependency for restTemplate -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpasyncclient</artifactId>
		</dependency>

		<!-- dependency to be able to build self-contained executable jars -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-loader</artifactId>
		</dependency>

		<!-- cache implementation dependencies -->
		<dependency>
		    <groupId>com.github.ben-manes.caffeine</groupId>
		    <artifactId>caffeine</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>

		<dependency>
		  <groupId>commons-cli</groupId>
		  <artifactId>commons-cli</artifactId>
		  <version>1.4</version>
		</dependency>

        <!-- Tools for preventing Web Application security vulnerabilities such as Cross-Site Scripting -->
		<dependency>
		    <groupId>org.owasp.encoder</groupId>
		    <artifactId>encoder</artifactId>
		    <version>1.2.2</version>
		</dependency>

	</dependencies>

	<distributionManagement>
		<repository>
			<!-- This is where releases/snapshots of artifacts are being uploaded/deployed -->
			<id>tip-wlan-cloud-maven-repo</id> <!-- Must Match the Unique Identifier in settings.xml -->
			<name>TIP WLAN Cloud Maven Repo</name>
			<url>https://tip.jfrog.io/artifactory/tip-wlan-cloud-maven-repo</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

		<repository>
			<!-- This is where releases/snapshots of artifacts are downloaded from -->
			<!--
			The username and password are retrieved by looking for the Repository
			Id in the $HOME/.m2/settings.xml file.
			-->

			<!-- id Must Match the Unique Identifier in settings.xml -->
			<id>tip-wlan-cloud-maven-repo</id>
			<url>https://tip.jfrog.io/artifactory/tip-wlan-cloud-maven-repo</url>
			<releases />
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.20</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>13</source>
					<target>13</target>
				</configuration>
			</plugin>

			<!-- configure source jar -->
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- configure envTarget system property for integration tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- <reuseForks>false</reuseForks> -->
					<systemPropertyVariables>
						<envTarget>integration_test</envTarget>
						<propertyName>propertyValue</propertyName>
						<testOutputDir>${project.build.directory}</testOutputDir>

					</systemPropertyVariables>
                                        <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>doclint-java13-disable</id>
			<activation>
				<jdk>[13,)</jdk>
			</activation>
			<properties>
				<javadoc.opts>-Xdoclint:none</javadoc.opts>
			</properties>
		</profile>
	</profiles>

</project>
